compiler/testData/cli/jvm/kt19628.kt
import javax.xml.bind.annotation.adapters.XmlJavaTypeAdapter

class Data(
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
    var value: String?
)